# fastcraft

./: CMakeLists.txt  main.cpp
cmake_modules/: FindGLFW.cmake
resources/shader/: main.frag  main.vert  skybox.vert  vertex.vertexshader
resources/shader/mac/: fragment.fragmentshader  vertex.vertexshader
src/: Block.cpp  Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Fastcraft.cpp  Fastcraft.h  File.h  Framelimit.h  Object.cpp  Object.h  Player.cpp  Player.h  Settings.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Timer.h  VertexArray.cpp  VertexArray.h  World.cpp  World.h
